update publish statement

--- a/en/meta.yml
+++ b/en/meta.yml
@@ -2,7 +2,7 @@ title: scratch-timer
 hero_image: images/banner.png
 subtitle: scratch-timer subtitle
 description: scratch-timer description
-published: 'false'
+published: false
 
 steps:
   - title: Step one
