--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,6 +1,6 @@
 title: Adding a timer in Scratch
 hero_image: images/banner.png
-description: Adding a timer to a sprite
+description: Adding a timer to your Scratch project
 original_url: 
 theme: cc-prototype
 duration: 1
