--- a/en/meta.yml
+++ b/en/meta.yml
@@ -6,8 +6,8 @@ theme: cc-prototype
 duration: 1
 listed: false
 ingredient: true
+copyedit: true
 interests: 
 technologies: "scratch"
->>>>>>> draft
 steps:
   - title: Adding a timer
