--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,13 +1,13 @@
 title: Adding a timer in Scratch
 hero_image: images/banner.png
 description: Adding a timer to your Scratch project
-original_url: 
+original_url:
 theme: cc-prototype
 duration: 1
 listed: false
 ingredient: true
-copyedit: true
-interests: 
+copyedit: false
+interests:
 technologies: "scratch"
 steps:
   - title: Adding a timer
